@@ -111,9 +111,9 @@ LOCAL_BOOST=		@LOCAL_BOOST@
 # Extra information for the Doozer++ file common.defs.mk.
 # -----------------------------------------------------------------------------
 EXTRA_CFLAGS=		$(CFLAGS_DYNLIB)
-EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB)
+EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB) @CPPDOM_CXXFLAGS@
 EXTRA_DEPEND_FLAGS=	-I$(VPRROOT_ABS) @BOOST_INCLUDES@
-EXTRA_DEFS+=		-D_VPR_BUILD_ -DCPPDOM_EXPORTS
+EXTRA_DEFS+=		-D_VPR_BUILD_
 EXTRA_INCLUDES=		-I$(top_srcdir) @BOOST_INCLUDES@
 EXTRA_LDFLAGS=		@EXTRA_LDFLAGS@
 
